--- a/sources/app/src/main/res/layout/fragment_login.xml
+++ b/sources/app/src/main/res/layout/fragment_login.xml
@@ -7,78 +7,74 @@
     android:layout_height="match_parent"
     android:background="@color/theme_bg_1">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="210dp">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="160dp"
-                android:layout_height="160dp"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                android:layout_marginTop="30dp"
+                android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_ui_circle_heart"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView"
-                app:layout_constraintEnd_toEndOf="@+id/imageView"
-                app:layout_constraintStart_toStartOf="@+id/imageView"
-                app:layout_constraintTop_toTopOf="@+id/imageView"
-                android:contentDescription="@string/app_name" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:contentDescription="@string/app_name"
                 android:src="@drawable/icon_tree_family"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/app_name" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintBottom_toBottomOf="@+id/imageView1"
+                app:layout_constraintEnd_toEndOf="@+id/imageView1"
+                app:layout_constraintHorizontal_bias="0.487"
+                app:layout_constraintStart_toStartOf="@+id/imageView1"
+                app:layout_constraintTop_toTopOf="@+id/imageView1" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ui_button_violet_control"
-                android:drawableStart="@drawable/ic_baseline_lock_open_24"
-                android:drawablePadding="5sp"
-                android:fontFamily="@font/roboto_medium"
-                android:padding="20sp"
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="172dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/roboto_bold"
                 android:text="@string/login_upper"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textColor="@color/theme_text_1"
+                android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3"
-                app:layout_constraintVertical_bias="0.298" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView1" />
 
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="302dp"
                 android:layout_height="150dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="30dp"
+                android:contentDescription="@string/app_name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.495"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
-                app:srcCompat="@drawable/ui_login_textbox"
-                android:contentDescription="@string/app_name" />
+                app:srcCompat="@drawable/ui_login_textbox" />
 
             <EditText
                 android:id="@+id/input_username"
                 android:layout_width="280dp"
                 android:layout_height="46dp"
                 android:layout_marginTop="24dp"
+                android:autofillHints=""
                 android:drawableStart="@drawable/ic_username"
                 android:drawablePadding="10sp"
                 android:ems="10"
@@ -93,14 +89,14 @@
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="@+id/imageView3"
                 app:layout_constraintStart_toStartOf="@+id/imageView3"
-                app:layout_constraintTop_toTopOf="@+id/imageView3"
-                android:autofillHints="" />
+                app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
             <EditText
                 android:id="@+id/input_password"
                 android:layout_width="280dp"
                 android:layout_height="42dp"
                 android:layout_marginBottom="24dp"
+                android:autofillHints=""
                 android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                 android:drawablePadding="10sp"
                 android:ems="11"
@@ -115,25 +111,30 @@
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                 app:layout_constraintEnd_toEndOf="@+id/imageView3"
-                app:layout_constraintStart_toStartOf="@+id/imageView3"
-                android:autofillHints="" />
+                app:layout_constraintStart_toStartOf="@+id/imageView3" />
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/roboto_bold"
+            <Button
+                android:id="@+id/button"
+                android:layout_width="184dp"
+                android:layout_height="67dp"
+                android:layout_marginTop="45dp"
+                android:layout_marginBottom="45dp"
+                android:background="@drawable/ui_button_violet_control"
+                android:drawableStart="@drawable/ic_baseline_lock_open_24"
+                android:drawablePadding="5sp"
+                android:fontFamily="@font/roboto_medium"
+                android:padding="20sp"
                 android:text="@string/login_upper"
-                android:textColor="@color/theme_text_1"
-                android:textSize="30sp"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView3"
+                app:layout_constraintVertical_bias="0.298" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </LinearLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
